--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 ## User settings
 xcuserdata/
+xcshareddata/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
@@ -65,6 +66,7 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build/
+Carthage/Checkouts
 
 # Accio dependency management
 Dependencies/
